modified:   css/style.css 	modified:   index.html

--- a/css/style.css
+++ b/css/style.css
@@ -6,28 +6,28 @@ body {
 }
 
 .layout_padding {
-  padding: 75px 0;
+  padding: 35px;
 }
 
 .layout_padding2 {
-  padding: 45px 0;
+  padding: 35px;
 }
 
 .layout_padding2-top {
-  padding-top: 45px;
+  padding-top: 35px;
 }
 
 
 .layout_padding2-bottom {
-  padding-bottom: 45px;
+  padding-bottom: 35px;
 }
 
 .layout_padding-top {
-  padding-top: 75px;
+  padding-top: 35px;
 }
 
 .layout_padding-bottom {
-  padding-bottom: 75px;
+  padding-bottom: 35px;
 }
 
 
