--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Poppins', sans-serif;
   color: #000000;
   background-color: #ffffff;
-  margin-top: 0%;
+  margin-top: 0;
 }
 
 .layout_padding {
