modified:   aboutus.html 	new file:   artgallery.html 	modified:   contact.html 	modified:   css/style.css 	modified:   faqs.html 	new file:   images/LTAT.logo.jpg 	modified:   index.html 	modified:   service.html

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   color: #000000;
-  background-color: #ffffff;
+  background-color: #f3f2f2;
   margin-top: 0;
 }
 
@@ -146,7 +146,8 @@ a:focus {
 }
 
 .navbar-brand img {
-  width: 135px;
+  width: 180px;
+  height: 65px;
   margin-right: 5px;
 }
 
@@ -628,3 +629,23 @@ footer::after {
       font-size: 24px;
   }
 }
+
+/* footer section*/
+
+.footer_section {
+  background-color: #efeded;
+  padding: 20px 0;
+  font-family: "Roboto", sans-serif;
+}
+
+.footer_section p {
+  color: #191818;
+  margin: 0;
+  text-align: center;
+}
+
+.footer_section a {
+  color: #191818;
+}
+
+/* end footer section*/
