modified:   css/style.css 	deleted:    images/LTAT.logo..jpg

--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,7 @@ a:focus {
 /* contact section */
 
 .contact_section {
-  background-image: url(../images/contact_logo.png);
+  background-image: url(../images/LTAT.logo.png);
   background-repeat: no-repeat;
   background-size: 215px;
   background-position: right center;
