--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 body {
   font-family: 'Poppins', sans-serif;
   color: #000000;
-  background-color: #f3f2f2;
+  background-color: #ffffff;
 }
 
 .layout_padding {
-  padding: 4dvb;
+  padding: 75px 0;
 }
 
 .layout_padding2 {
-  padding: 45px;
+  padding: 45px 0;
 }
 
 .layout_padding2-top {
@@ -22,18 +22,18 @@ body {
 }
 
 .layout_padding-top {
-  padding-top: 45px;
+  padding-top: 75px;
 }
 
 .layout_padding-bottom {
-  padding-bottom: 45px;
+  padding-bottom: 75px;
 }
 
 
 .custom_dark-btn,
 .custom_orange-btn {
   display: inline-block;
-  padding: 10px 0%;
+  padding: 10px 0;
   text-align: center;
   width: 145px;
   outline: none;
@@ -70,8 +70,117 @@ body {
   text-align: center;
 }
 
+.preloader {
+  background-color: #f7f7f7;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999999;
+  -webkit-transition: .6s;
+  -o-transition: .6s;
+  transition: .6s;
+  margin: 0 auto;
+}
 
-/*header section*/
+/* line 593, C:/Users/HP/Desktop/July-HTML/292 Health coach/assets/scss/_common.scss */
+.preloader .preloader-circle {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  border-style: solid;
+  border-width: 1px;
+  border-top-color: #FF0000;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  z-index: 10;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
+  box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
+  background-color: #fff;
+  -webkit-animation: zoom 2000ms infinite ease;
+  animation: zoom 2000ms infinite ease;
+  -webkit-transition: .6s;
+  -o-transition: .6s;
+  transition: .6s;
+}
+
+/* line 615, C:/Users/HP/Desktop/July-HTML/292 Health coach/assets/scss/_common.scss */
+.preloader .preloader-circle2 {
+  border-top-color: #0078ff;
+}
+
+/* line 618, C:/Users/HP/Desktop/July-HTML/292 Health coach/assets/scss/_common.scss */
+.preloader .preloader-img {
+  position: absolute;
+  top: 50%;
+  z-index: 200;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  text-align: center;
+  display: inline-block;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  padding-top: 6px;
+  -webkit-transition: .6s;
+  -o-transition: .6s;
+  transition: .6s;
+}
+
+/* line 636, C:/Users/HP/Desktop/July-HTML/292 Health coach/assets/scss/_common.scss */
+.preloader .preloader-img img {
+  max-width: 55px;
+}
+
+/* line 639, C:/Users/HP/Desktop/July-HTML/292 Health coach/assets/scss/_common.scss */
+.preloader .pere-text strong {
+  font-weight: 800;
+  color: #dca73a;
+  text-transform: uppercase;
+}
+
+@-webkit-keyframes zoom {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .6s;
+    -o-transition: .6s;
+    transition: .6s;
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+    -webkit-transition: .6s;
+    -o-transition: .6s;
+    transition: .6s;
+  }
+}
+
+@keyframes zoom {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .6s;
+    -o-transition: .6s;
+    transition: .6s;
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+    -webkit-transition: .6s;
+    -o-transition: .6s;
+    transition: .6s;
+  }
+}
+
+
+
 .hero_area {
   height: 98vh;
   background-color: #f7f7f7;
@@ -95,7 +204,7 @@ body {
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-link {
   padding: 10px 30px;
   color: #343434;
-  text-align: center;
+  text-align: center
 }
 
 a,
@@ -143,18 +252,17 @@ a:focus {
 }
 
 .navbar-brand img {
-  width: 45px;
-  /* height: 65px; */
+  width: 135px;
   margin-right: 5px;
-  /* transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
-  cursor: pointer; */
+  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
+  cursor: pointer;
 }
 
-/* .navbar-brand img:hover {
+.navbar-brand img:hover {
   transform: scale(1.1);
   box-shadow: 0 4px 10px rgba(144, 144, 144, 0.15);
   opacity: 0.9;
-} */
+} 
 
 .navbar-brand span {
   font-size: 20px;
@@ -190,11 +298,12 @@ a:focus {
 
 /* slider section */
 .slider_section {
-  padding-top: 8%;
+  padding-top: 2%;
 }
 
 .slider_item-box {
   width: 100%;
+  height: 100%;
 }
 
 .slider_item-box .container {
@@ -218,13 +327,11 @@ a:focus {
   background-repeat: no-repeat;
 }
 
-/* .slider_item-container .slider_item-detail {
-
-} */
+.slider_item-container .slider_item-detail {}
 
 .slider_item-detail h2 {
   font-weight: 700;
-  font-size: 40px;
+  font-size: 60px;
   width: 95%;
 }
 
@@ -280,13 +387,19 @@ a:focus {
 /* end slider section */
 
 
-
-
 /* service section */
 .service_section .card .card-img-top {
   width: 110px;
   margin: 55px auto 5px auto;
-  /* margin-top: 10px; */
+  margin-top: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
+  cursor: pointer;
+}
+
+.service_section .card .card-img-top:hover {
+  transform: scale(1.1);
+  box-shadow: 0 4px 10px rgba(144, 144, 144, 0.15);
+  opacity: 0.9;
 }
 
 .service_section .card {
@@ -329,14 +442,14 @@ a:focus {
 
 
 
-/* tasty section */
+/* Passionate section */
 
-.tasty_section {
+.passionate_section {
   width: 100%;
-  height: 60vh; /* Responsive height */
-  background-image: url(../images/passionate.jpg);
+  height: 60vh;
+  background-image: url(../Stuff/passionate.jpg);
   background-repeat: no-repeat;
-  background-size: cover; /* Scales to cover entire container */
+  background-size: cover;
   background-position: center;
   display: flex;
   justify-content: center;
@@ -345,8 +458,8 @@ a:focus {
   box-sizing: border-box;
 }
 
-.tasty_section h2 {
-  font-size: 8vw; /* Responsive font size based on viewport width */
+.passionate_section h2 {
+  font-size: 8vw;
   text-align: center;
   font-weight: bold;
   color: #ffffff;
@@ -355,21 +468,19 @@ a:focus {
   line-height: 1.1;
 }
 
-/* Optional: Make sure text doesn’t get too big or small */
 @media (min-width: 1200px) {
-  .tasty_section h2 {
+  .passionate_section h2 {
     font-size: 96px;
   }
 }
 
 @media (max-width: 480px) {
-  .tasty_section h2 {
+  .passionate_section h2 {
     font-size: 12vw;
   }
 }
 
-
-/* end tasty section */
+/* end Passionate section */
 
 /* client section */
 .client_container {
@@ -384,7 +495,7 @@ a:focus {
 }
 
 .client_img-box img {
-  width: 100px;
+  width: 100%
 }
 
 .client_container h3 {
@@ -432,7 +543,7 @@ a:focus {
 /* contact section */
 
 .contact_section {
-  background-image: url(../images/LTAT.logo1.png);
+  background-image: url(../Stuff/LTAT.logo1.png);
   background-repeat: no-repeat;
   background-size: 215px;
   background-position: right center;
@@ -465,7 +576,7 @@ a:focus {
 
 /* map section */
 .map_section {
-  height: 400px;
+  height: 500px;
 }
 
 
@@ -477,8 +588,8 @@ a:focus {
 }
 
 .info_section ul li {
+  list-style-type: none;
   margin: 3px 0;
-  font-size: small;
 
 }
 
@@ -516,74 +627,48 @@ a:focus {
 
 /* footer section*/
 
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  padding: 10px;
-  background-color: #ffffff;
+.footer_section {
+  background-color: #efeded;
   width: 100%;
-  /* background: linear-gradient(90deg, #ffffff, #313581); */
-  display: grid;
-  grid-template-areas: "logo socials" "links links";
-  grid-template-columns: repeat(1fr, 1fr);
-  color: #000000;
-  z-index: 1000;
+  gap: 10px;
+  padding: 10px 10px;
+  font-family: "Roboto", sans-serif;
 }
 
-footer::after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 60px;
-  background: rgba(96, 95, 95, 0.1);
+
+.social_container {
+  text-align: center;
+  padding: 10px;
+  padding-bottom: 0;
 }
 
-.logo {
-  grid-area: logo;
-  width: 135px;
-  height: 40px;
-  align-items: center;
-  padding-left: 15px;
-  display: flex;
-  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
-  cursor: pointer;
-  color: #000000;
-}
-
-.logo:hover {
-  transform: scale(1.1);
-  box-shadow: 0 4px 10px rgba(144, 144, 144, 0.15);
-  opacity: 0.9;
+.social_container h5 {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+  font-weight: bold;
 }
 
 .socials {
-  grid-area: socials;
   display: flex;
-  justify-content: flex-end;
-  padding-right: 30px;
-  align-items: center;
+  justify-content: center;
   gap: 20px;
-  font-size: 28px;
-}
-
-.socials a {
-  color: #000000; /* default color */
-  transition: color 0.3s ease, transform 0.3s ease;
+  flex-wrap: wrap;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
   cursor: pointer;
+  font-size: 50px;
 }
 
 .socials a:hover {
-  transform: scale(1.2);
-}
+  transform: scale(1.1);
+  box-shadow: 0 4px 10px rgba(144, 144, 144, 0.15);
+  opacity: 0.9;
+} 
 
-/* Optional: Specific brand colors on hover */
-.fa-x-twitter:hover {
-  color: #1DA1F2;
+.socials a {
+  font-size: 1.8rem;
+  color: #333;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
 .fa-pinterest:hover {
@@ -598,70 +683,21 @@ footer::after {
   color: #FF0000;
 }
 
-.links {
-  grid-area: links;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  padding: 40px 0 50px;
-  gap: 20px;
-}
-
-.links h2 {
-  color: rgba(0, 0, 0, 1);
-  font-size: 20px;
-}
-
-.links ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  padding-left: 15px;
-  padding-right: 15px;
-  gap: 10px;
-  font-size: 14px;
-  opacity: 0.8;
-}
-
-.links address {
-  font-style: normal;
-  line-height: 1.5;
-  font-size: 12px;
-  color: black;
-}
-
-@media (max-wdth: 786px) {
-  .links {
-      grid-template-columns: repeat(2, 1fr);
-      gap: 20px;
-      padding: 40px;
-  }
-}
-
-@media (max-width: 500px) {
+@media (max-width: 786px) {
   footer {
       grid-template-areas: "socials";
+      display: flex;
       grid-template-columns: 1fr;
       text-align: center;
-      padding: 20px;
   }
 
   .socials {
       justify-content: center;
-      padding-top: 10px;
-      font-size: 24px;
+      padding-top: 5px;
+      font-size: 38px;
+      padding-right: auto;
   }
 }
-
-/* footer section*/
-
-.footer_section {
-  background-color: #efeded;
-  padding: 20px 0;
-  font-family: "Roboto", sans-serif;
-}
-
 .footer_section p {
   color: #191818;
   margin: 0;
